--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,13 +262,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "rasterize(admin, filename_admin,resampled_Pop, workspace + r'/raster_admin.tif')\n",
     "rasterMultiplication(workspace + r\"/rasterBase.tif\", workspace + r\"/raster_admin.tif\", workspace + r\"/rasterBase.tif\")\n",
     "clusters = toPolygon(workspace + r\"/rasterBase.tif\", 1, workspace + r\"/clusters\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clusters[\"geometry\"] = clusters.geometry.buffer(0.00099)\n",
+    "clusters[\"DISS\"] = 0\n",
+    "clusters = clusters.dissolve(by=\"DISS\")\n",
+    "\n",
+    "def multi2single(gpdf):\n",
+    "    gpdf_singlepoly = gpdf[gpdf.geometry.type == 'Polygon']\n",
+    "    gpdf_multipoly = gpdf[gpdf.geometry.type == 'MultiPolygon']\n",
+    "\n",
+    "    for i, row in gpdf_multipoly.iterrows():\n",
+    "        Series_geometries = pd.Series(row.geometry)\n",
+    "        df = pd.concat([gpd.GeoDataFrame(row, crs=gpdf_multipoly.crs).T]*len(Series_geometries), ignore_index=True)\n",
+    "        df['geometry']  = Series_geometries\n",
+    "        gpdf_singlepoly = pd.concat([gpdf_singlepoly, df])\n",
+    "\n",
+    "    gpdf_singlepoly.reset_index(inplace=True, drop=True)\n",
+    "    return gpdf_singlepoly\n",
+    "\n",
+    "clusters = multi2single(clusters)\n",
+    "\n",
+    "clusters.to_file(workspace + \"\\\\\" + \"dissolved_mutosin.shp\")"
    ]
   },
   {
@@ -282,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,14 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "modelled urban ratio is 0.474% in comparision to the actual ratio of 0.48% after 14 iterations.\n"
+      "Modelled urban ratio is 0.481% in comparision to the actual ratio of 0.48% after 7 iterations.\n"
      ]
     }
    ],
@@ -389,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
