adding buffer and disolve option, updated

--- a/Algorithm/main.ipynb
+++ b/Algorithm/main.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crs = 'EPSG:3395'"
+    "crs = 'epsg:3395'"
    ]
   },
   {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,31 +272,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optional step - adding a buffer zone, dissolve and convert to single part polygons\n",
+    "The buffer will reduce the number of final clusters. You may skip this step if you want to have a more \"clean\" result."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters[\"geometry\"] = clusters.geometry.buffer(0.00099)\n",
-    "clusters[\"DISS\"] = 0\n",
-    "clusters = clusters.dissolve(by=\"DISS\")\n",
+    "#Define coordinate system of the geodataframe\n",
+    "clusters = gpd.GeoDataFrame(clusters, geometry='geometry', crs={'init': 'epsg:4326'})\n",
     "\n",
-    "def multi2single(gpdf):\n",
-    "    gpdf_singlepoly = gpdf[gpdf.geometry.type == 'Polygon']\n",
-    "    gpdf_multipoly = gpdf[gpdf.geometry.type == 'MultiPolygon']\n",
+    "# Projecting geodataframe to coordinate system (so buffer can be added in meters)\n",
+    "clusters_prj = clusters.to_crs({'init': \"epsg:3395\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding buffer (in meters)\n",
+    "clusters_prj[\"geometry\"] = clusters_prj.geometry.buffer(500)\n",
     "\n",
-    "    for i, row in gpdf_multipoly.iterrows():\n",
-    "        Series_geometries = pd.Series(row.geometry)\n",
-    "        df = pd.concat([gpd.GeoDataFrame(row, crs=gpdf_multipoly.crs).T]*len(Series_geometries), ignore_index=True)\n",
-    "        df['geometry']  = Series_geometries\n",
-    "        gpdf_singlepoly = pd.concat([gpdf_singlepoly, df])\n",
+    "# Adding supporting column for dissolving \n",
+    "clusters_prj[\"DISS\"] = 0\n",
     "\n",
-    "    gpdf_singlepoly.reset_index(inplace=True, drop=True)\n",
-    "    return gpdf_singlepoly\n",
+    "# Dissolve buffered polygons\n",
+    "clusters_prj = clusters_prj.dissolve(by=\"DISS\")\n",
     "\n",
-    "clusters = multi2single(clusters)\n",
+    "# Convert one multipart polygon (product of dissolve) to many single part polygons \n",
+    "clusters_prj = multi2single(clusters_prj)\n",
     "\n",
-    "clusters.to_file(workspace + \"\\\\\" + \"dissolved_mutosin.shp\")"
+    "# Reproject data to the reference coordinate system \n",
+    "clusters = clusters_prj.to_crs({'init': 'epsg:4326'})    "
    ]
   },
   {
@@ -310,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modelled urban ratio is 0.481% in comparision to the actual ratio of 0.48% after 7 iterations.\n"
+      "Modelled urban ratio is 0.419% in comparision to the actual ratio of 0.48% after 501 iterations.\n"
      ]
     }
    ],
